# twd

./: .gitignore  README.md  pyproject.toml  requirements.txt  twd_bash
.github/workflows/: create-release.yml  python-publish.yml
src/twd/: __init__.py  cli.py  config.py  data.py  modals.py  tui.py  tui.tcss  utils.py
src/twd/modals/: edit.py
twd/: screen.py  twd.py
